Update button class.

--- a/templates/base.html
+++ b/templates/base.html
@@ -33,7 +33,7 @@
       .btn {
         width: 200px;
       }
-      .generate-btn, .contact-btn {
+      button.generate-btn, button.contact-btn {
         background: #de6017;
         color: #fff;
         font-weight: bold;
